Added Coupon lifetime
Added option for users to set a coupon's lifetime to 'first' or
'indefinite'.

'first' will be for the first month, first 3 months or first 12 months.

'indefinite' will be for the life of the site.

--- a/pro-sites-files/css/psts-admin.css
+++ b/pro-sites-files/css/psts-admin.css
@@ -75,6 +75,7 @@ input[name="uses"] {
 }
 
 .coupon-code .help_tip,
+.coupon-life .help_tip,
 .expire-date .help_tip,
 .allowed-users .help_tip,
 .coupon-period .help_tip {
