Front-end registration.
Fixed up a few issues with gateways and added a Trial gateway for level
display purposes.

Adding front-end registration from the checkout page. (incomplete)
When completed user will be able to click on the signup button, add
user details and blog details. User can then check for availability
and proceed to wards checkout. Adds same wordpress actions as core
wp-signup.php to allow for custom profile fields. Still uses
'registration_errors' and 'register_post' hooks and other filters
for other plugins.

--- a/pro-sites-files/css/checkout.css
+++ b/pro-sites-files/css/checkout.css
@@ -1084,6 +1084,11 @@ ul.pricing-column.not-chosen-plan .button-box button {
     list-style: none;
 }
 
+#prosites-checkout-table .login-existing {
+    clear: both;
+    margin-top: 20px;
+}
+
 
 /* === DARK MODE === */
 
