Front end checkout/registration.
Huge commit changing the ProSites checkout flow when users enable
checkout registration.

This commit now integrates better with the Stripe gateway and all
Stripe webhooks now work again.  Some initial changes made to other
gateways, but they all need to be reworked to follow the Stripe model.

Added different way to detect trial subscriptions as it was using a
'Trial' gateway was causing some issues with integrating Stripe.

How to test:
Enable ProSites and make sure you enable the following:
Settings > Allow Signup on Checkout (ignored and always on at the moment)
Pricing Tables > Enable Pricing Table (legacy grid still to be added)
Payment Gateways > Enable and configure Stripe settings
Payment Gateways > Multi-Gateway Preferences. Set Stripe as Primary.

Still to do:
* Allow multiple blog signup (almost finished)
* Rework PayPal gateway (when above is finished)
* Rework 2CheckOut gateway (when above is finished)
* Clean up all unneeded code
* Escape and sanitization checks

--- a/pro-sites-files/css/checkout.css
+++ b/pro-sites-files/css/checkout.css
@@ -503,6 +503,14 @@ ul.pricing-column li, .pricing-column ul li {
     padding:0;
 }
 
+#psts-payment-info-received ul, #psts-payment-info-received ul li {
+    margin-left: 0.5em;
+    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+    box-sizing: border-box;
+    padding:0;
+}
+
 .pricing-column blockquote, .pricing-column q {
 	quotes: none;
 }
@@ -1089,6 +1097,34 @@ ul.pricing-column.not-chosen-plan .button-box button {
     margin-top: 20px;
 }
 
+.input_available {
+    position: absolute;
+    display: inline-block;
+}
+.input_available:after {
+    font-family: dashicons;
+    content: "\f147";
+    color: #00CE8A;
+    /*z-index: 100;*/
+}
+
+#prosites-user-register .error{
+    background: none repeat scroll 0 0 #ffebe8;
+    /*border: 1px solid #cc0000;*/
+    /*color: #333333;*/
+    color: #cc0000;
+    font-size: 0.8em;
+    padding: 2px 5px;
+    margin: 2px 0;
+}
+
+#psts-payment-info-received, #psts-payment-info-received h2 {
+    margin: 0;
+    padding: 0;
+}
+#psts-payment-info-received h2 {
+    margin-bottom: 20px;
+}
 
 /* === DARK MODE === */
 
