Added FREE non-pro plan back to checkout.
Also added options to settings to allow/disallow free plans on checkout.

--- a/pro-sites-files/css/psts-admin.css
+++ b/pro-sites-files/css/psts-admin.css
@@ -143,18 +143,20 @@ input[name="uses"] {
     width: 200px;
 }
 
+.multiple-signup,
 .redirect-signup,
 .free-signup,
 .pay-for-signup {
     position: relative;
 }
+.multiple-signup .psts-help-text-wrapper,
 .free-signup .psts-help-text-wrapper {
-    left: 52px;
-    top: 37px;
+    left: 48px;
+    top: 52px;
 }
 .pay-for-signup .psts-help-text-wrapper {
-    left: 40px;
-    top: 37px;
+    left: 62px;
+    top: 52px;
 }
 
 .psts-free-trial .psts-help-text-wrapper {
