--- a/pro-sites-files/css/checkout.css
+++ b/pro-sites-files/css/checkout.css
@@ -1126,6 +1126,28 @@ ul.pricing-column.not-chosen-plan .button-box button {
     margin-bottom: 20px;
 }
 
+.free-plan-link-logged-in,
+.free-plan-link {
+    /*background: none repeat scroll 0 0 rgba(245, 245, 245, 1);*/
+    font-size: 0.9em;
+    padding: 3px;
+    text-align: center;
+    margin-top: 3px;
+    position:relative;
+    top: 3px;
+    clear:both;
+
+    -webkit-hyphens: none;
+    -moz-hyphens: none;
+    -ms-hyphens: none;
+    hyphens: none;
+}
+
+.login-existing {
+    /*text-align: right;*/
+    /*font-size: 0.9em;*/
+}
+
 /* === DARK MODE === */
 
 .darkmode #gateways ul li,
